# rtatblas

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: test_harness.h
src/matrix_ops/: matrixop.h
src/methods/: base_options.h
